--- a/Vacancy.html
+++ b/Vacancy.html
@@ -25,7 +25,7 @@
             </div>
           </div>
 
-          <p style="background-color:whitesmoke;">Lorem ipsum...</p>
+          <p style="background-color:whitesmoke;"> To apply for a job with us just fill the details below and we will consider your application.</p>
           <h1>Vacancy Form</h1>
     </body>
 </html>
